# booster-rpc

./: LICENSE  README.md  example.py  pyproject.toml  ruff.toml
examples/: stream_video.py  walk_forward.py
proto/: base.proto  entity.proto  rpc.proto
src/booster_rpc/: __init__.py  connection.py  proto.py
