[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "booster-rpc"
version = "0.0.1"
description = "Booster RPC"
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.11,<3.14"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["robotics", "booster", "rpc"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "betterproto>=1.2.5",
  "grpcio>=1.78.1",
]

[dependency-groups]
dev = ["ipykernel", "pre-commit"]
